Fix for overlap of buttons on smaller screens

--- a/com.getshop.client/apps/PmsBookingGroupRoomView/skin/PmsBookingGroupRoomView.css
+++ b/com.getshop.client/apps/PmsBookingGroupRoomView/skin/PmsBookingGroupRoomView.css
@@ -12,6 +12,11 @@
     line-height:30px;
     font-size:30px;
 }
+@media screen and (max-width: 1350px) {
+    #switch-booking-view {
+        right:45px;
+    }
+}
 .PmsBookingGroupRoomView .movetotype .bookingitem {
     border: solid 1px transparent;
     display: inline-block;
